--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,4 +13,5 @@ import Themetoggle from './Themetoggle.astro'
     <span class="gpt-subtitle">Demo</span>
   </div>
   <p mt-1 op-60>Based on OpenAI API (gpt-3.5-turbo).</p>
+  <p mt-1 op-60>嗨，我是你的AI朋友！我们的目标是让更多小伙伴们可以跟我玩耍啊！</p>
 </header>
