--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,16 +3,16 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://ddiu.io" target="_blank"
+      target="_blank" style="color: red"
     >
-      Diu
+      经贸六栋泡泡堂-技术支持
     </a>
     <span px-1>|</span>
     <a
       b-slate-link
       href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
     >
-      Source Code
+      源代码地址
     </a>
   </p>
 </footer>
